--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,18 +9,11 @@
     <!-- Prevent flash of incorrect theme -->
     <script>
       (function() {
-        var theme = localStorage.getItem('theme');
-        var root = document.documentElement;
-        
-        if (theme === 'dark') {
-          root.dataset.theme = 'dark';
-        } else if (theme === 'system') {
-          var prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-          if (prefersDark) {
-            root.dataset.theme = 'dark';
-          }
+        var t = localStorage.getItem('theme');
+        if (t === 'dark') document.documentElement.dataset.theme = 'dark';
+        else if (t === 'system' && window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+          document.documentElement.dataset.theme = 'dark';
         }
-        // Light theme is default, no action needed
       })();
     </script>
     
